Finish SayWhatILike Ios First Project

--- a/SayWhatILike/Base.lproj/Main.storyboard
+++ b/SayWhatILike/Base.lproj/Main.storyboard
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +13,67 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="SayWhatILike" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="What do you want to say?" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fCf-Wo-CEc">
+                                <rect key="frame" x="65.5" y="254" width="244" height="26.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="xkf-ux-nqI">
+                                <rect key="frame" x="10" y="320.5" width="355" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="apple.png" translatesAutoresizingMaskIntoConstraints="NO" id="ZZ9-Ad-90v">
+                                <rect key="frame" x="-62.5" y="40" width="500" height="194"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="500" id="3f0-zt-dsb"/>
+                                    <constraint firstAttribute="height" constant="194" id="VQG-VJ-yWX"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GSA-rQ-S9D">
+                                <rect key="frame" x="169.5" y="355.5" width="36" height="39"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                <state key="normal" title="Say"/>
+                                <connections>
+                                    <action selector="pressBtn:" destination="BYZ-38-t0r" eventType="touchUpInside" id="dWE-s9-nf0"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="xkf-ux-nqI" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="0TQ-uD-leF"/>
+                            <constraint firstItem="GSA-rQ-S9D" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="3mv-ZA-hth"/>
+                            <constraint firstItem="ZZ9-Ad-90v" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="BF6-Ag-3HR"/>
+                            <constraint firstItem="xkf-ux-nqI" firstAttribute="top" secondItem="fCf-Wo-CEc" secondAttribute="bottom" constant="40" id="LAq-mj-ZKY"/>
+                            <constraint firstItem="GSA-rQ-S9D" firstAttribute="top" secondItem="xkf-ux-nqI" secondAttribute="bottom" constant="5" id="Nk9-Fe-yn7"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="xkf-ux-nqI" secondAttribute="trailing" constant="10" id="Onf-1o-Wq0"/>
+                            <constraint firstItem="xkf-ux-nqI" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="R9t-5Y-E3c"/>
+                            <constraint firstItem="ZZ9-Ad-90v" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Y9Y-ar-dJ2"/>
+                            <constraint firstItem="fCf-Wo-CEc" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="ZSP-8t-d1N"/>
+                            <constraint firstItem="GSA-rQ-S9D" firstAttribute="top" secondItem="xkf-ux-nqI" secondAttribute="bottom" constant="5" id="c0m-TE-Buo"/>
+                            <constraint firstItem="ZZ9-Ad-90v" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="dBH-be-urk"/>
+                            <constraint firstItem="fCf-Wo-CEc" firstAttribute="top" secondItem="ZZ9-Ad-90v" secondAttribute="bottom" constant="20" id="dJY-pD-Hb7"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="inputText" destination="xkf-ux-nqI" id="GRd-cv-SOq"/>
+                        <outlet property="textLabel" destination="fCf-Wo-CEc" id="sbp-mF-suX"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="136.80000000000001" y="133.5832083958021"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="apple.png" width="1000" height="1215"/>
+    </resources>
 </document>
